--- a/roles/apache-centos/handlers/main.yml
+++ b/roles/apache-centos/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
 # handlers file for roles/apache-centos
+  - name: Reiniciar httpd.
+    service:
+      name: httpd
+      state: restarted
+      enabled: yes
