--- a/lamp.yml
+++ b/lamp.yml
@@ -14,6 +14,7 @@
 
   roles:
   - role: apache-centos
+    when: ansible_facts['os_family'] == "RedHat"
 
   tasks:
   - name: Instalar software LAMP
