--- a/main.yml
+++ b/main.yml
@@ -15,6 +15,8 @@
   roles:
   - role: apache-centos
     when: ansible_facts['os_family'] == "RedHat"
+  - role: apache-debian
+    when: ansible_facts['os_family'] == "Debian"
 
   tasks:
   - name: Instalar software LAMP
