--- a/roles/apache-debian/tasks/main.yml
+++ b/roles/apache-debian/tasks/main.yml
@@ -1,2 +1,57 @@
 ---
 # tasks file for roles/apache-ubuntu
+---
+# tasks file for roles/apache-centos
+  - name: Instalar Apache Server.
+    apt:
+      name: apache2
+      state: latest
+
+  - name: Crear directorio de configuracion de virtualhost.
+    file:
+      path: /etc/httpd/vhost.d
+      state: directory
+      mode: '0755'
+      owner: root
+
+  - name: Agregar directorio de configuracion de virtualhost a httpd.conf.
+    lineinfile:
+      path: /etc/httpd/conf/httpd.conf
+      line: IncludeOptional vhost.d/*.conf
+
+  - name: Crear directorio de contenido de virtualhost.
+    file:
+      path: "{{ item }}"
+      recurse: yes
+      state: directory
+      owner: apache
+      group: apache
+      mode: '0755'
+    loop:
+      - /var/www/{{ sitio }}
+      - /var/www/{{ sitio }}/html
+      - /var/www/{{ sitio }}/cgi-bin
+
+  - name: Crear configuracion de virtualhost.
+    template:
+      src: templates/{{ sitio }}.j2
+      dest: /etc/httpd/vhost.d/{{ sitio }}.conf
+      owner: root
+      mode: '0644'
+    notify: Reiniciar httpd
+
+  - name: Iniciar y habilitar servicio Apache (httpd).
+    service:
+      name: httpd
+      state: started
+      enabled: yes
+
+  - name: Configurar reglas de firewall.
+    ufw:
+      service: "{{ item }}"
+      state: enabled
+      permanent: yes
+      immediate: yes
+    loop:
+      - http
+      - https
