--- a/roles/apache-debian/tasks/main.yml
+++ b/roles/apache-debian/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for roles/apache-ubuntu
+# tasks file for roles/apache-debian
 - name: Instalar Apache Server.
   apt:
     name: apache2
