--- a/roles/apache-debian/tasks/main.yml
+++ b/roles/apache-debian/tasks/main.yml
@@ -5,21 +5,9 @@
     name: apache2
     state: latest
 
-- name: Crear directorio de configuracion de virtualhost.
-  file:
-    path: /etc/httpd/vhost.d
-    state: directory
-    mode: '0755'
-    owner: root
-
-- name: Agregar directorio de configuracion de virtualhost a httpd.conf.
-  lineinfile:
-    path: /etc/httpd/conf/httpd.conf
-    line: IncludeOptional vhost.d/*.conf
-
-- name: Iniciar y habilitar servicio Apache (httpd).
+- name: Iniciar y habilitar servicio Apache (apache2).
   service:
-    name: httpd
+    name: apache2
     state: started
     enabled: yes
 
@@ -27,8 +15,6 @@
   ufw:
     service: "{{ item }}"
     state: enabled
-    permanent: yes
-    immediate: yes
   loop:
-    - http
-    - https
+    - 80
+    - 443
