--- a/main.yml
+++ b/main.yml
@@ -9,7 +9,7 @@
     hostmaster: admin@ejemplo.com.uy
 
   roles:
-  - role: apache-redhat
+  - role: apache-centos
     when: ansible_facts['os_family'] == "RedHat"
   - role: apache-debian
     when: ansible_facts['os_family'] == "Debian"
