--- a/main.yml
+++ b/main.yml
@@ -16,8 +16,9 @@
 
   - name: Crear configuracion de balanceo de cargas.
     template:
-      src: templates/{{ sitio }}.j2
-      dest: /etc/httpd/vhost.d/{{ sitio }}.conf
+      src: templates/loadbalancer.j2
+      dest: /etc/httpd/vhost.d/loadbalancer.conf
       owner: root
       mode: '0644'
+    when: ansible_facts['os_family'] == "RedHat"
     notify: Reiniciar httpd
