--- a/roles/apache-centos/handlers/main.yml
+++ b/roles/apache-centos/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 # handlers file for roles/apache-centos
-- name: Reiniciar httpd.
+- name: Reiniciar httpd
   service:
     name: httpd
     state: restarted
